目次の最適化

--- a/index.html
+++ b/index.html
@@ -24,21 +24,18 @@
   <section class="index index-[category_flg] ma1010">
     <p>目次</p>
     <ol style="column-count: 1 !important;">
-      <li><a href="#one">外国人を採用するときの見るべきポイント</a></li>
-      <ol>
-        <li> <a href="#one-1">面接前のポイント</a></li>
-        <li> <a href="#one-2">面接時のポイント</a></li>
-      </ol>
-      <li><a href="#two">日本人と面接する時との違い </a></li>
-      <li><a href="#three">まとめ</a></li>
+      <li><a href="#one">外国人労働者の現状とは？</a></li>
+      <li><a href="#tow">外国人労働者を受け入れるメリット</a></li>
+      <li><a href="#three">外国人労働者を受け入れる際の注意点</a></li>
+      <li><a href="#for">まとめ</a></li>
     </ol>
   </section>
   <section>
-    <h2>１．外国人労働者の現状とは？</h2>
+    <h2 id="one">１．外国人労働者の現状とは？</h2>
     <p>まずは、日本にいる外国人労働者の現状について見ていきましょう。</p>
     <p>厚生労働省の「外国人雇用状況」によると、令和２年10月末時点の日本で働く外国人労働者の数は、<span class="markerY">約170万人です。</span>国籍別にみると、１位がベトナムの約44万 人、２位が中国の約42万人、３位がフィリピンの18万人となっており、上位３か国で、外国人労働者全体の約６割を占めています。</p>
     <p>産業別にみると､「製造業」が最も多く、外国人労働者全体の28.0％を占めています。次いで、「サービス業」が16.1％､「卸売業､小売業」が 13.5％となっています。また、日本での人材不足が深刻になっているIT事業でも、<span class="markerY">外国人労働者を採用する企業が増えています。</span></p>
-    <h2 id="one">２．外国人労働者を受け入れるメリット</h2>
+    <h2 id="tow">２．外国人労働者を受け入れるメリット</h2>
     <p>年々増加している外国人労働者ですが、受け入れにはどんなメリットがあるでしょうか。ここでは３点紹介します。</p>
     <h3>１つ目は、優秀な若い人材を確保できることです。</h3>
     <p>
@@ -56,9 +53,9 @@
       日本では、空気を読むことや暗黙の了解といった「言わなくても理解すること」が求められます。しかし外国人労働者にはそのような習慣がないため、はっきりとわかりやすく伝える必要があります。ビジネスマナーや休暇の取り方、仕事の方法などは、全て言葉に出して説明する必要があります。手間はかかりますが、自然とコミュニケーションが増えることで、社内の雰囲気も良いものに変わるでしょう。<br>
       また、受け入れる日本人側にとっても、外国人労働者に説明することで、<span class="markerY">自分達の「当たり前」が世界の常識ではないことに気づくきっかけになります。</span>お互いの違いを理解し、より働きやすい環境に変えていくことは、ダイバーシティを推進することにもつながります。
     </p>
-    <h2>3．外国人労働者を受け入れる際の注意点</h2>
+    <h2 id="three">3．外国人労働者を受け入れる際の注意点</h2>
     <p>外国人労働者の受け入れにはメリットもありますが、注意しなければならない点もあります。ここでは３つ紹介します。</p>
-    <h3 id="one-1">１つ目は、受け入れの手続きが煩雑で、時間がかかることです。</h3>
+    <h3>１つ目は、受け入れの手続きが煩雑で、時間がかかることです。</h3>
     <p>外国人労働者の受け入れには様々な手続きがあり、時間と労力が必要になります。例として、技能実習生がビザを取得し、日本に来るまでの流れを見てみましょう。</p>
     <ol class="orderList">
       <li class="orderList_item">実習開始予定日の４か月前までに「技能実習計画」を外国人技能実習機構へ提出する。</li>
@@ -71,19 +68,19 @@
       このように、技能実習生を受け入れる場合、４か月以上前に採用者を決定しなければなりません。また、ビザ関連の手続きには時間がかかる場合もあるため、計画的に採用の準備を進める必要があります。<br>
       ここでは、技能実習生を例にあげましたが、他の在留資格で受け入れる場合にも、不法就労とならないよう関連する法律や制度を十分に理解する必要があります。外国人労働者を受け入れる際には、専門的な知識と細かい事務作業が必要となり、日本人の採用と比べ、手続きに時間と労力がかかります。
     </p>
-    <h3 id="one-2">２つ目は、言葉の壁があり、サポートが必要なことです。</h3>
+    <h3>２つ目は、言葉の壁があり、サポートが必要なことです。</h3>
     <p>
       外国人労働者は、ある程度日本語を理解していても、細かなニュアンスが伝わらなかったり、難しい漢字を読めなかったりするケースもあります。危険が伴う作業の際、日本語がわからなければ、仕事を任せることができません。<br>
       そのため、業務連絡や指示を出す際に工夫が必要となります。業務の説明は文字に書き起こし、漢字にはふりがなをふって、専門用語はやさしい日本語に書き換えます。状況によっては、スマートフォンの翻訳機能を使ったり、民間の翻訳サービスを導入する必要もあるかもしれません。<br>
       また、仕事だけでなく、生活面でのサポートも必要です。日本に入国後、市役所で住民登録や健康保険の加入が必要となりますが、こういった行政手続きにも、誰かが付き添うのが良いでしょう。言語の問題は、本人が語学能力を上げることも大切ですが、周りのサポートも必須となります。
     </p>
     <h3>３つ目は、異なる文化や価値観を理解し、制度や環境を整える必要があることです。</h3>
-    <p id="two">
+    <p>
       外国人労働者は、日本とは違う文化や価値観を持っています。それを、受け入れる企業側が十分に理解し、制度を整える必要があります。<br>
       例えば、日本では会社への帰属意識が高いですが、海外では個を尊重するのが一般的です。そのため、「会社のために働く」考え方は理解が得られず、すぐに離職してしまうかもしれません。外国人労働者が納得できるような説明を行い、気軽に相談できる体制を作ることが必要です。<br>
       また、宗教や文化に関する配慮も必要です。例えばイスラム教では、１日５回、決まった時間に礼拝を行わなければならず、食事も戒律をもとに定められています。そのため、社内に祈祷室を設けたり、ハラル食対応の社食を準備することが必要です。
     </p>
-    <h2 id="three">４．まとめ</h2>
+    <h2 id="for">４．まとめ</h2>
     <p>
       少子高齢化が進み、今後も労働力が減少する日本では、労働力の確保が重要です。外国人労働者を受け入れることは、その解決策の１つとなります。<br>
       外国人労働者を受け入れれば、労働力の面だけではなく、企業のグローバル化の観点からもメリットがあります。また、今まで日本人だけだった職場に外国人が加われば、コミュニケーションが活発になり、より良い組織となるでしょう。<br>
